@@ -61,9 +61,9 @@
 
 		if(date('H')*3600+date('i')*60+60 > 16200 && $last_handelskurs != date('Y-m-d')) // 4:30 Uhr
 		{
-			echo "\nRecalculating Handelskurs...\n";
+			echo "\n".date('Y-m-d, H:i:s')." -- Recalculating Handelskurs...\n";
 			system(s_root.'/db_things/calc_ges_ress');
-			echo "Handelskurs recalculated.\n\n";
+			echo date('Y-m-d, H:i:s')." -- Handelskurs recalculated.\n\n";
 
 			$last_handelskurs = date('Y-m-d');
 		}
