@@ -186,8 +186,9 @@ legend { font-weight:bold; }
 .karte-system td.c-aktionen ul { margin:0; padding:0; list-style-type:none; }
 .karte-system td.c-aktionen li { width:1ex; overflow:hidden; float:left; display:block; margin-right:.3em; font-family:monospace; }
 .karte-system td.c-aktionen a { font-family:monospace; }
-.karte-system .eigen .playername a { color:#8f8; }
-.karte-system .verbuendet .playername a { color:#8bf; }
+
+.karte-system .eigen .playername a,.highscores .eigen .playername { color:#8f8; }
+.karte-system .verbuendet .playername a,.highscores .verbuendet .playername { color:#8bf; }
 
 .karte-wahl { width:26.6em; margin:0 auto; padding:0; font-weight:bold; }
 .karte-galaxiewahl { float:left; width:13em; padding:0; margin:0 .1em 0 0; text-align:center; }
