@@ -1,3 +1,4 @@
+1131465268	In den Highscores wird der eigene Name und der von Verbündeten nun auch farbig markiert.
 1131464738	Diverse Änderungen an der Berechnung des Handelskurses vorgenommen.
 1131461242	Konzept des Kontrollwesens geändert.
 1131402233	In den Einstellungen trat ein Fehler mit dem Urlaubsmodus auf.
